@@ -1,7 +1,7 @@
-package sunshine_dental_care.services.impl.hr;
+package sunshine_dental_care.services.impl.hr.wifi;
 
+import java.util.Collections;
 import org.springframework.stereotype.Service;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import sunshine_dental_care.config.WiFiConfig;
@@ -15,7 +15,7 @@ public class WiFiValidationServiceImpl implements WiFiValidationService {
 
     private final WiFiConfig wifiConfig;
 
-    // Hàm validate SSID và BSSID cho 1 clinic cụ thể
+    // Kiểm tra hợp lệ WiFi cho clinic cụ thể
     @Override
     public WiFiValidationResult validateWiFi(String ssid, String bssid, Integer clinicId) {
         log.info("Validating WiFi for clinic {}: SSID={}, BSSID={}", clinicId, ssid, bssid);
@@ -25,21 +25,16 @@ public class WiFiValidationServiceImpl implements WiFiValidationService {
         boolean ssidValid = wifiConfig.isSsidAllowed(ssid);
         boolean bssidValid = wifiConfig.isBssidAllowed(bssid);
 
-        // Nếu có cấu hình wifi riêng cho clinic, sẽ kiểm tra lại với danh sách cấu hình riêng
         WiFiConfig.ClinicWiFiConfig clinicConfig = wifiConfig.getClinic().get(String.valueOf(clinicId));
         if (clinicConfig != null) {
-            log.debug("Found clinic-specific WiFi config for clinic {}", clinicId);
+            // Nếu có config riêng cho clinic thì ưu tiên kiểm tra theo danh sách riêng
             java.util.List<String> allowedSsids = parseList(clinicConfig.getSsids());
             java.util.List<String> allowedBssids = parseList(clinicConfig.getBssids());
-
-            log.debug("Clinic {} allowed SSIDs: {}, allowed BSSIDs: {}", clinicId, allowedSsids, allowedBssids);
 
             ssidValid = ssid != null && !ssid.trim().isEmpty()
                     && allowedSsids.contains(ssid.trim().toUpperCase());
             bssidValid = bssid != null && !bssid.trim().isEmpty()
                     && allowedBssids.contains(bssid.trim().toUpperCase());
-        } else {
-            log.debug("No clinic-specific WiFi config found for clinic {}, using global config", clinicId);
         }
 
         String message;
@@ -58,10 +53,10 @@ public class WiFiValidationServiceImpl implements WiFiValidationService {
         return new WiFiValidationResult(isValid, ssidValid, bssidValid, ssid, bssid, clinicId, message);
     }
 
-    // Hàm tách chuỗi thành List<String> từ chuỗi phân cách bởi dấu phẩy
+    // Chuyển chuỗi comma-separated thành list String, in hoa và loại bỏ rỗng
     private java.util.List<String> parseList(String value) {
         if (value == null || value.trim().isEmpty()) {
-            return java.util.List.of();
+            return Collections.emptyList();
         }
         return java.util.Arrays.stream(value.split(","))
                 .map(String::trim)
